--- a/.github/workflows/image-push.yml
+++ b/.github/workflows/image-push.yml
@@ -58,4 +58,4 @@ jobs:
           context: ./projects/${{ matrix.os_name }}
           file: ./projects/${{ matrix.os_name }}/release.Dockerfile
           push: true
-          tags:  ${{ secrets.CR_HOST }}${{ secrets.CR }}${{ matrix.os_name }}:latest
+          tags:  ${{ secrets.CR_HOST }}${{ secrets.CR }}${{ matrix.os_name }}.release:latest
