--- a/.github/workflows/image-push.yml
+++ b/.github/workflows/image-push.yml
@@ -22,11 +22,11 @@ jobs:
           - almalinux-8
           - centos-7
           - debian-11
-          - debian-12
+#          - debian-12
           - rockylinux-8
           - rockylinux-9
           - ubuntu-20.04
-          - ubuntu-22.04
+#          - ubuntu-22.04
 
     # job steps
     steps:
