--- a/.github/workflows/image-push.yml
+++ b/.github/workflows/image-push.yml
@@ -22,10 +22,10 @@ jobs:
           - almalinux-8
           - centos-7
           - debian-11
-#          - debian-12
           - rockylinux-8
-          - rockylinux-9
           - ubuntu-20.04
+#          - debian-12
+#          - rockylinux-9
 #          - ubuntu-22.04
 
     # job steps
