removing versions that dont build, adding the building of release images

--- a/.github/workflows/image-push.yml
+++ b/.github/workflows/image-push.yml
@@ -39,9 +39,9 @@ jobs:
           username: ${{ secrets.USER }}
           password: ${{ secrets.PW }}
 
-      # checkout the codebase
-      - name: Checkout
-        uses: actions/checkout@v1
+#      # checkout the codebase
+#      - name: Checkout
+#        uses: actions/checkout@v1
 
       # build and push the development image. The docker v3 action automatically handles the git checkout.
       - name: Build/Push the development image to the registry
@@ -50,7 +50,7 @@ jobs:
           context: ./projects/${{ matrix.os_name }}
           file: ./projects/${{ matrix.os_name }}/Dockerfile
           push: true
-          tags:  ${{ secrets.CR_HOST }}${{ secrets.CR }}${{ matrix.os_name }}:latest
+          tags: ${{ secrets.CR_HOST }}${{ secrets.CR }}${{ matrix.os_name }}:latest
 
       # build and push the release image. The docker v3 action automatically handles the git checkout.
       - name: Build/Push the release image to the registry
@@ -59,4 +59,4 @@ jobs:
           context: ./projects/${{ matrix.os_name }}
           file: ./projects/${{ matrix.os_name }}/release.Dockerfile
           push: true
-          tags:  ${{ secrets.CR_HOST }}${{ secrets.CR }}${{ matrix.os_name }}.release:latest
+          tags: ${{ secrets.CR_HOST }}${{ secrets.CR }}${{ matrix.os_name }}.release:latest
